Minor fixes to FaC icon and personal page text alignment

--- a/css/personal-page.css
+++ b/css/personal-page.css
@@ -96,7 +96,7 @@ box-sizing: border-box;
   padding-right: 1rem;
 }
 .ppage{
-  font-size: 2rem;
+  font-size: 2rem !important;
   color: black;
 }
 /*li a{
